# claude-theater

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  claude_theater.py  pyproject.toml  start.cmd  theater.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  format-drift.yml
.github/workflows/: ci.yml  publish-extension.yml  release.yml
fixtures/: README.md
fixtures/cc-2.1/: done.jsonl  malformed.jsonl  missing_fields.jsonl  running.jsonl
fixtures/cc-future/: unknown_version.jsonl
tests/: smoke_serve.py  test_parser.py
vscode-extension/: .vscodeignore  README.md  extension.js  package.json
